xcode-default-theme.css
/* Tab Bar Background, Inactive Tab Background */
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .editor-actions,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.close-button-left {
  background: linear-gradient(#c8c8c8, #c0c0c0);
}
/* Active Tab Background */
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.close-button-left.active {
  background: linear-gradient(#dfdfdf, #d2d2d2);
}
/* Tab Shrink */
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.sizing-shrink
  > .tab-label::after {
  display: none;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.sizing-shrink {
  max-width: none;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.sizing-shrink
  > .monaco-icon-label
  > .monaco-icon-label-description-container {
  text-align: center;
  text-overflow: ellipsis;
  width: 100%;
}
/* Tab Height */
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .editor-actions
  .action-label,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .title-actions
  .action-label,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title,
.monaco-workbench > .part > .title {
  height: 24px;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab
  .tab-label
  a,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .title-label
  a {
  font-size: 12px;
  line-height: 22px;
}
/* Tab Border */
.monaco-workbench
  > .part.editor
  > .content.multiple-groups
  > .one-editor-silo
  > .container
  > .title,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title {
  border-left: 1px solid #a1a1a5;
  position: relative;
  left: -1px;
  width: calc(100% + 1px);
}
/* Close Button */
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab.active
  > .tab-close
  .action-label,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title:not(.active)
  .tabs-container
  > .tab:not(.active)
  > .tab-close
  .action-label,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab:not(.active)
  > .tab-close
  .action-label {
  opacity: 0;
  transition: none;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab.active:hover
  > .tab-close
  .action-label {
  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath fill='%234A484A' d='M0 .946L.946 0l3.038 3.038L7.03 0 8 .946 4.954 3.992 8 7.03 7.03 8 3.984 4.962.946 8 0 7.03l3.038-3.038z' fill-rule='evenodd'/%3E%3C/svg%3E")
      50% no-repeat,
    linear-gradient(#dddddd, #d4d4d4);
  opacity: 1;
  transition: opacity 300ms;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title:not(.active)
  .tabs-container
  > .tab:not(.active):hover
  > .tab-close
  .action-label,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab:not(.active):hover
  > .tab-close
  .action-label {
  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath fill='%234A484A' d='M0 .946L.946 0l3.038 3.038L7.03 0 8 .946 4.954 3.992 8 7.03 7.03 8 3.984 4.962.946 8 0 7.03l3.038-3.038z' fill-rule='evenodd'/%3E%3C/svg%3E")
      50% no-repeat,
    linear-gradient(#c7c7c7, #c1c1c1);
  opacity: 1;
  transition: opacity 300ms;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab.active
  > .tab-close
  .action-label:hover {
  transition: background 300ms;
  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath fill='%234A484A' d='M0 .946L.946 0l3.038 3.038L7.03 0 8 .946 4.954 3.992 8 7.03 7.03 8 3.984 4.962.946 8 0 7.03l3.038-3.038z' fill-rule='evenodd'/%3E%3C/svg%3E")
      50% no-repeat,
    linear-gradient(#c1bfc1, #b8b7b8);
  border-radius: 2px;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title:not(.active)
  .tabs-container
  > .tab:not(.active)
  > .tab-close
  .action-label:hover,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab:not(.active)
  > .tab-close
  .action-label:hover {
  transition: background 300ms;
  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath fill='%234A484A' d='M0 .946L.946 0l3.038 3.038L7.03 0 8 .946 4.954 3.992 8 7.03 7.03 8 3.984 4.962.946 8 0 7.03l3.038-3.038z' fill-rule='evenodd'/%3E%3C/svg%3E")
      50% no-repeat,
    linear-gradient(#a7a5a7, #999e99);
  border-radius: 2px;
}
.tab.active .monaco-action-bar.animated .action-item.active {
  transform: none;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab.active
  > .tab-close
  .monaco-action-bar.animated
  .action-item.active
  .action-label {
  transition: background 300ms;
  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath fill='%234A484A' d='M0 .946L.946 0l3.038 3.038L7.03 0 8 .946 4.954 3.992 8 7.03 7.03 8 3.984 4.962.946 8 0 7.03l3.038-3.038z' fill-rule='evenodd'/%3E%3C/svg%3E")
      50% no-repeat,
    linear-gradient(#a8a6a8, #9f9e9f);
  border-radius: 2px;
}
.tab:not(.active) .monaco-action-bar.animated .action-item.active {
  transform: none;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title:not(.active)
  .tabs-container
  > .tab:not(.active)
  > .tab-close
  .monaco-action-bar.animated
  .action-item.active
  .action-label,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title.active
  .tabs-container
  > .tab:not(.active)
  > .tab-close
  .monaco-action-bar.animated
  .action-item.active
  .action-label {
  transition: background 300ms;
  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath fill='%234A484A' d='M0 .946L.946 0l3.038 3.038L7.03 0 8 .946 4.954 3.992 8 7.03 7.03 8 3.984 4.962.946 8 0 7.03l3.038-3.038z' fill-rule='evenodd'/%3E%3C/svg%3E")
      50% no-repeat,
    linear-gradient(#8e8c8e, #808580);
  border-radius: 2px;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.sizing-shrink.close-button-left {
  padding-left: 5px;
  padding-right: 5px;
  position: relative;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.sizing-shrink
  > .monaco-icon-label
  > .monaco-icon-label-description-container {
  padding-left: 21px;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab
  .tab-label
  a {
  margin-left: -21px;
}
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab.active
  > .tab-close,
.monaco-workbench
  > .part.editor
  > .content
  > .one-editor-silo
  > .container
  > .title
  .tabs-container
  > .tab:not(.active)
  > .tab-close {
  position: absolute;
  top: 3px;
  left: 0;
}
/* Scrollbar */
.monaco-shell .monaco-scrollable-element > .scrollbar > .slider {
  background: #a0a0a0 !important;
  border-radius: 9px;
  left: unset !important;
  right: 2px;
  transition: width 100ms;
  width: 7px !important;
}
.monaco-shell .monaco-scrollable-element > .scrollbar {
  border-left: 1px solid transparent;
  transition: border-color 100ms;
  width: 11px;
}
.monaco-shell .monaco-scrollable-element > .scrollbar:hover {
  border-color: #cdcdcd;
  width: 13px;
}
.monaco-shell .monaco-scrollable-element > .scrollbar:hover > .slider {
  background: #a0a0a0 !important;
  border-radius: 9px;
  width: 10px !important;
}
/* Sidebar Title */
.monaco-workbench > .sidebar > .title > .title-label,
.monaco-workbench > .part > .title > .title-actions .action-label {
  height: 24px;
  line-height: 22px;
}
.monaco-workbench > .sidebar > .title > .title-label span,
.monaco-panel-view .panel > .panel-header > .title {
  font-weight: bold;
  text-transform: none;
}
.monaco-workbench > .part > .composite.title {
  border-bottom: 1px solid #cdcdcd;
}
/* Side Bar Drop Target */
.monaco-tree .monaco-tree-wrapper.drop-target,
.monaco-tree .monaco-tree-rows > .monaco-tree-row.drop-target {
  background-color: rgba(51, 153, 255, 0.18) !important;
}
/* Status Bar */
.monaco-workbench > .part.statusbar {
  background: linear-gradient(#eeecee, #d7d5d7);
}
/* Line Numbers */
.monaco-editor .margin-view-overlays .line-numbers {
  font-size: 10.5px;
  letter-spacing: -0.06em;
  padding-top: 1px;
}
.monaco-editor .view-line {
  padding-top: 1px;
}
/* Input Boxes */
.monaco-shell .synthetic-focus {
  outline: none !important;
  outline-offset: 0 !important;
  box-shadow: 0 0 0 2pt #94c0f1;
}
.monaco-inputbox.idle:not(.synthetic-focus) {
  border: 1px solid #bdbdbd !important;
}
.monaco-inputbox.idle.synthetic-focus {
  border: 1px solid #87b3e4 !important;
}
.monaco-inputbox.idle,
.monaco-inputbox > .wrapper > .input,
.monaco-editor .find-widget .monaco-inputbox .input {
  border-radius: 3px !important;
}
/* Buttons */
.monaco-text-button {
  border-radius: 5px;
  background: linear-gradient(#6cb3fa, #067dff);
  border: 1px solid #4ca2f9;
  padding: 2px 10px !important;
  font-size: 12.5px !important;
}
.monaco-text-button:active {
  background: linear-gradient(#4c98fe, #0664e3);
  border: 1px solid #247eff;
}

